# Discord-Bot

./: Cargo.toml  Config.toml  Secrets.toml
src/: main.rs
